--- a/web/src/less/share-memo-image-dialog.less
+++ b/web/src/less/share-memo-image-dialog.less
@@ -76,7 +76,7 @@
             }
 
             > .usage-text {
-              @apply -mt-1 text-sm font-normal text-gray-400;
+              @apply -mt-1 text-sm text-gray-400;
             }
           }
 
